# real-estate-scrape

./: .pre-commit-config.yaml  README.md  pyproject.toml  real_estate_scrape.py  requirements.txt  setup.cfg
.github/workflows/: publish.yml  real-estate-scrape.yml
src/realestatescrape/: __init__.py
