[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "real-estate-scrape"
version = "0.2.0"
description = "Get the estimated value of a property from Redfin and Zillow"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Mike Lee Williams", email = "mike@mike.place"}
]
keywords = ["twitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "lxml",
    "matplotlib",
    "pandas",
    "pre-commit>=2.21.0",
    "requests",
]

[project.urls]
Homepage = "https://github.com/mikepqr/real-estate-scrape"
"Bug Reports" = "https://github.com/mikepqr/real-estate-scrape/issues"
Source = "https://github.com/mikepqr/real-estate-scrape"

[project.scripts]
real-estate-scrape = "realestatescrape:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.isort]
profile = "black"
multi_line_output = 3
