[metadata]
name = real-estate-scrape
version = 0.1.1
description = Get the estimated value of a property from Redfin and Zillow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikepqr/real-estate-scrape
author = Mike Lee Williams
author_email = mike@mike.place
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords = twitter
project_urls =
    Bug Reports=https://github.com/mikepqr/real-estate-scrape/issues
    Source=https://github.com/mikepqr/real-estate-scrape

[options]
package_dir = =src
packages = find:
python_requires = >=3.6
install_requires =
    lxml
    matplotlib
    pandas
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    real-estate-scrape=realestatescrape:main
